# alexNet-cpp

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md  alexNet.cpp  alexNet.h  convolutionalLayer.cpp  convolutionalLayer.h  make.sh  outputLayer.cpp  outputLayer.h  poolingLayer.cpp  poolingLayer.h
openCV/: CMakeLists.txt
openCV/modules/core/include/opencv2/core/: cv_cpu_dispatch.h
openCV/modules/core/include/opencv2/core/hal/: intrin_rvv071.hpp
openCV/modules/core/src/: convert.dispatch.cpp  count_non_zero.dispatch.cpp  hal_replacement.hpp  minmax.cpp  norm.cpp
openCV/modules/dnn/src/layers/: layers_common.simd.hpp
openCV/modules/imgproc/src/: corner.cpp  hal_replacement.hpp
openCV/modules/video/src/: hal_replacement.hpp  lkpyramid.cpp
src/: CMakeLists.txt  train.cpp
src/common/: tensor.h
src/layers/: activation.h  convolutionalLayer.cpp  convolutionalLayer.h  convolutionalLayer2D.cpp  convolutionalLayer2D.h  dropout.h  linearLayer.cpp  linearLayer.h  outputLayer.cpp  outputLayer.h  poolingLayer.cpp  poolingLayer.h  poolingLayer2D.cpp  poolingLayer2D.h
src/model/: alexNet.cpp  alexNet.h
test/: CMakeLists.txt  convTest.cpp  linearTest.cpp  poolTest.cpp  testUtils.h
